--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   shared_preferences: ^2.2.3
   sqflite: ^2.3.3
   path: ^1.9.0
+  http: ^1.1.0
+  provider: ^6.1.2
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,7 +70,7 @@ flutter:
       - assets/produit2.png
       - assets/produit3.png
       - assets/produit4.png
-      - assets/profile.png
+      - assets/cute.jpg
       - assets/products.json
       - assets/
 
